metasploit/templates/service-delivery_http.yaml
apiVersion: v1
kind: Service
metadata:
  name: metasploit-delivery-http
spec:
  selector:
    app: metasploit-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
