metasploit/templates/service-handler.yaml
apiVersion: v1
kind: Service
metadata:
  name: metasploit-handler
spec:
  selector:
    app: metasploit-deployment
  ports:
    - protocol: TCP
      port: 4444
      targetPort: 4444
